Fix border and spacing issues at smaller screen sizes

--- a/app/styles/ilios-common/components/weekly-calendar.scss
+++ b/app/styles/ilios-common/components/weekly-calendar.scss
@@ -43,6 +43,7 @@
     scroll-snap-type: y mandatory;
 
     .weekly-calendar-event {
+      overflow: hidden;
       z-index: 5;
     }
 
